# llvm-project

clang/: CMakeLists.txt
clang/docs/: PointerAuthentication.rst
clang/test/: CMakeLists.txt  lit.cfg.py  lit.site.cfg.py.in
compiler-rt/cmake/: config-ix.cmake
compiler-rt/test/: CMakeLists.txt
ignorelist_test/: allowlist.txt  main.c
ignorelist_test/lib1/: foo.c
ignorelist_test/lib2/: bar.c
libcxxabi/src/: private_typeinfo.cpp
libunwind/src/: AddressSpace.hpp  DwarfInstructions.hpp  DwarfParser.hpp  Registers.hpp  UnwindCursor.hpp  UnwindLevel1.c  UnwindRegistersRestore.S  UnwindRegistersSave.S  assembly.h  libunwind.cpp  libunwind_ext.h
lld/COFF/: Driver.cpp
lld/ELF/: Config.h  Driver.cpp  ICF.cpp  InputFiles.cpp  InputFiles.h  InputSection.cpp  InputSection.h  LinkerScript.cpp  LinkerScript.h  MapFile.cpp  MarkLive.cpp  Options.td  OutputSections.cpp  OutputSections.h  Relocations.cpp  Relocations.h  SymbolTable.cpp  Symbols.cpp  Symbols.h  SyntheticSections.cpp  SyntheticSections.h  Thunks.cpp  Writer.cpp  Writer.h
llvm/docs/: LangRef.rst  PointerAuth.md
llvm/utils/: compute-discriminator  compute-discriminators  dump-dynauth  dumpall.sh  frankendroid  frankenndk  pfp-bazel  pfp-check-libcxx  pfp-cmake
llvm/utils/gn/secondary/clang/lib/APINotes/: BUILD.gn
llvm/utils/gn/secondary/clang/lib/Index/: BUILD.gn
patches/: README  README.cuttlefish  rebuild-libgcc
patches/aosp/: 0001-PAC.patch  0001-libunwind_llvm-on-arm64.patch  0002-Disable-ASLR-in-ART.patch  0003-PAC.patch  0009-Fix-SwiftShader-build.patch  (+62 more)
test-progs/: Makefile  hello.c
(+458 files in other folders)
